[metadata]
name = gluelib
version = 1.2.0
author = Hamish Knox
author_email = hrjkknox@gmail.com
description = A simple library for the pastebin API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hrjkknox/gluelib
project_urls =
    Bug Tracker = https://github.com/hrjkknox/gluelib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
